# c_rcnf

./: CMakeLists.txt  README.md  simple.py  test.c
c_rcnf/: env.c  env.h  ext.c  ext.h  rcnf.c
c_rcnf/lang/: lplang.c
c_rcnf/lang/structs/: lang_structs.c
c_rcnf/shared/: c_rcnf.c  c_rcnf.h
docs/: standart.md  wiki.md
include/: env.h  ext.h  rcnf.h
include/lang/: lplang.h
include/lang/structs/: lang_structs.h
include/shared/: c_rcnf.h
misc/: setup.bat  setup.sh
other/: simple.py
other/createdll/: simple.c  simple.h
rcnf/: __init__.py  rcnfwrp.py
